--- a/src/main/cpp/libunrar/makefile
+++ b/src/main/cpp/libunrar/makefile
@@ -3,7 +3,7 @@
 
 # Linux using GCC
 CXX=c++
-CXXFLAGS=-O2
+CXXFLAGS=-O2 -Wno-logical-op-parentheses -Wno-switch -Wno-dangling-else
 LIBFLAGS=-fPIC
 DEFINES=-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -DRAR_SMP
 STRIP=strip
@@ -17,6 +17,16 @@ DESTDIR=/usr
 #DEFINES=-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE
 #STRIP=strip
 #AR=ar
+#DESTDIR=/usr
+
+# CYGWIN using GCC
+#CXX=c++
+#CXXFLAGS=-O2
+#LIBFLAGS=
+#DEFINES=-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -DRAR_SMP
+#STRIP=strip
+#AR=ar
+#LDFLAGS=-pthread
 #DESTDIR=/usr
 
 # HP UX using aCC
@@ -112,7 +122,7 @@ WHAT=UNRAR
 UNRAR_OBJ=filestr.o recvol.o rs.o scantree.o qopen.o
 LIB_OBJ=filestr.o scantree.o dll.o qopen.o
 
-OBJECTS=rar.o strlist.o strfn.o pathfn.o smallfn.o global.o virtualFile.o filefn.o filcreat.o \
+OBJECTS=rar.o strlist.o strfn.o pathfn.o smallfn.o global.o file.o filefn.o filcreat.o \
 	archive.o arcread.o unicode.o system.o isnt.o crypt.o crc.o rawread.o encname.o \
 	resource.o match.o timefn.o rdwrfn.o consio.o options.o errhnd.o rarvm.o secpassword.o \
 	rijndael.o getbits.o sha1.o sha256.o blake2s.o hash.o extinfo.o extract.o volume.o \
