--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -5,7 +5,8 @@ project(unrar)
 add_subdirectory(libunrar)
 #add_executable(unrar main.cpp)
 #target_link_libraries(unrar static_unrar)
+include_directories(libunrar)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLITTLE_ENDIAN")
-add_library(unrar-jni SHARED rar_file.cpp jni_util.c)
-target_link_libraries(unrar-jni static_unrar)
+add_library(unrar-jni SHARED rar_file.cpp jni_util.c register_native.c)
+target_link_libraries(unrar-jni static_unrar log)
