--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ android {
 
         externalNativeBuild {
             cmake {
-                abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
+                abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
                 arguments "-DANDROID_STL=c++_static"
             }
         }
