--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -8,5 +8,8 @@ add_subdirectory(libunrar)
 include_directories(libunrar)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLITTLE_ENDIAN")
+
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fvisibility=hidden")
+
 add_library(unrar-jni SHARED rar_file.cpp jni_util.c register_native.c)
 target_link_libraries(unrar-jni static_unrar log)
