--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -11,5 +11,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLITTLE_ENDIAN")
 
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fvisibility=hidden")
 
-add_library(unrar-jni SHARED rar_file.cpp register_native.c)
+add_library(unrar-jni SHARED rar_file.cpp jni_init.c)
 target_link_libraries(unrar-jni static_unrar log)
