--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
-        exclude group: 'androidx.annotation', module: 'annotation'
-    })
-    testImplementation 'junit:junit:4.12'
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0')
+    testImplementation 'junit:junit:4.13.1'
 
     implementation "androidx.annotation:annotation:1.1.0"
 }
